[tool.poetry]
name = "firebase-sub"
version = "0.1.0"
description = ""
authors = ["Chris Hopkins <cbehopkins@gmail.com>"]
readme = "README.md"
requires-poetry = ">=2.0"

[tool.poetry.dependencies]
python = "^3.12"
firebase-admin = "^7.0"
mailtrap = "^2.5"
click = "^8.2.1"
pydantic = "^2.11.7"
pyserial = "^3.5"
croniter = "^6.0"
pywebpush = "^2.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
black = "^26.0"
isort = "^6.0"
tox = "^4.24"
flake8 = "^7.0"
mypy = "^1.0"

[tool.black]
force-exclude = '''
/(\.tox|\.git|\.venv|\.eggs|build|dist|docs)/
'''
[tool.mypy]
ignore_missing_imports = true
python_version = "3.12"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["firebase_sub.database.*"]
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
warn_no_return = true

[[tool.mypy.overrides]]
module = ["tests.*"]
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
no_implicit_optional = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
